--- a/repdata/peer2/StormData.html
+++ b/repdata/peer2/StormData.html
@@ -451,7 +451,7 @@ summary(dts[, c('STATE', 'Region'), with=F])</code></pre>
 <div id="results" class="section level1">
 <h1><span class="header-section-number">3</span> Results</h1>
 <p>Weather events reported between 1950 and 2011 from the NOAA Storm Database were analyzed for the frequencies of the types of event and the portion of the those event actually resulted in either human fatalities, injuries, property damages, or corp damages. The frequencies were further subdivided into regions and sorted by event frequencies to aid prioritizing emergency resource and preparation.</p>
-<p>Assessments of human causalities and economy impact by region and primary weather elements were presented next. A causality multiplier (lamda = 100) was applied to the fatality figures (fatality = 100 injuries) when assessing impact too population to health.</p>
+<p>Assessments of human causalities and economy impact by region and primary weather elements were presented next. A causality multiplier (lamda = 100) was applied to the fatality figures (1 fatality = 100 injuries) when assessing impact to population health.</p>
 <div id="event-frequencies" class="section level2">
 <h2><span class="header-section-number">3.1</span> Event frequencies</h2>
 <p>States in the Southeast regions are most likely to be susceptible to weather event linked to wind, water or ice. States in the Plains were most susceptible to events linked to ice.</p>
